--- a/app/assets/stylesheets/pages/_login_page.scss
+++ b/app/assets/stylesheets/pages/_login_page.scss
@@ -1,5 +1,5 @@
 .container_orange_login {
-  padding: 105px 10px 105px 10px;
+  padding: 60px 10px 85px 10px;
   background-color: #ff7700;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
@@ -46,7 +46,7 @@
   }
 }
 .or_section {
-  margin-top: 20px;
+  margin-top: 10px;
   p {
     margin: 0 10px;
     color: #a6a6a6;
@@ -61,4 +61,16 @@
 
 abbr[title] {
   display: none;
+}
+
+.hline-2 {
+  width: 100%;
+  height: 1px;
+  background: #fff;
+  opacity: 0.3;
+  margin-bottom: 20px;
+}
+
+.line {
+  padding: 0 85px;
 }
